--- a/package.json
+++ b/package.json
@@ -23,16 +23,24 @@
     "@ionic-native/core": "~4.20.0",
     "@ionic-native/splash-screen": "~4.20.0",
     "@ionic-native/status-bar": "~4.20.0",
-    "@ionic/storage": "2.2.0",
+    "@ionic/storage": "^2.2.0",
+    "com.paypal.cordova.mobilesdk": "3.5.0",
+    "font-awesome": "^4.7.0",
     "ionic-angular": "3.9.5",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
+    "woocommerce-api": "^1.4.2",
     "zone.js": "0.8.29"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.2.2",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "com.paypal.cordova.mobilesdk": {}
+    }
+  }
 }
